suppression de themes et ajout gitignore

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@ ga('send', 'pageview');
 <p>Le site est une présentation de mes peintures.</p>
 
 <p>Certaines toiles sont en vente, d&rsquo;autres déjà aquises ou données. Les toiles qui ne sont pas en vente peuvent l&rsquo;être ultérieurement.
-N&rsquo;hésitez pas à <a href="/contact">prendre contact</a> si une toile vous intéresse.</p>
+N&rsquo;hésitez pas à <a href="/contact">prendre contact</a> si une toile vous intéresse, ou pour toute question. Une page <a href="/informations">information</a> est disponible pour en savoir plus.</p>
 
   </article>
   
@@ -172,7 +172,7 @@ N&rsquo;hésitez pas à <a href="/contact">prendre contact</a> si une toile vous
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Claude Monet, Meules, fin de l&rsquo;été, musée d&rsquo;Orsay à Paris, 1891
+          Copie du tableau &ldquo; Meules, fin de l&rsquo;été&rdquo; de Claude Monet, 1891. L&rsquo;original est visible au musée d&rsquo;Orsay à Paris.
 Huile sur toile
         </div>
           <a href="/peintures/018-meules-fin-de-l-ete/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Voir tableau</a>
@@ -205,7 +205,7 @@ Huile sur toile
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Claude Monet, Les meules, effet de gelée blanche (W1215), 1889, Hill-Stead Museum, Farmington, Etats-Unis.
+          Copie du tableau &ldquo;Les meules, effet de gelée blanche&rdquo; (W1215), 1889. Tableau visible au Hill-Stead Museum, Farmington, Etats-Unis.
 Huile sur toile
         </div>
           <a href="/peintures/017-les-meules-effet-de-gelee-blanche/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Voir tableau</a>
@@ -238,7 +238,7 @@ Huile sur toile
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Claude Monet, Meules, fin de l&rsquo;été, 1891, Institut d&rsquo;art de Chicago.
+          Copie du tableau &ldquo;Meules, fin de l&rsquo;été&rdquo; de Claude Monet, 1891. L&rsquo;original est visible à l&rsquo;institut d&rsquo;art de Chicago.
 Huile sur toile
         </div>
           <a href="/peintures/016-meules-fin-de-l-ete/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Voir tableau</a>
@@ -270,6 +270,7 @@ Huile sur toile
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://loursquipeint.com" >
     &copy; 2017 L&#39;ours qui peint
   </a>
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/informations">Informations</a>
   
 
 
